@@ -1,4 +1,5 @@
 2007-08-16 Damien Douxchamps http://damien.douxchamps.net/
+        * SVN 419: more changes on the new camera detection API.
         * SVN 418: first changes on the new camera detection API.
 	
 2007-08-15 Damien Douxchamps http://damien.douxchamps.net/
